--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_clear_db">Delete Saved Data</string>
     <string name="action_read_db">Show Saved Data</string>
+    <string name="action_rate_app">Rate App</string>
     <string name="action_hide_show">Hide</string>
     <string name="action_about">About</string>
     <string name="tableTopics">Table Topics (1 to 2 min)</string>
@@ -28,8 +29,10 @@
     <string name="settings_vibrate_summary">Vibrate when display changes color</string>
     <string name="settings_sound">Sound</string>
     <string name="settings_sound_summary">Play sound when display changes color</string>
+    <string name="settings_color">Color</string>
+    <string name="settings_color_summary">Use orange background instead of yellow</string>
     <string name="contact_developer_uri">happypuppydev@gmail.com</string>
-    <string name="version">1.4.4</string>
+    <string name="version">1.4.5</string>
     <string name="send_email_using">Send email using...</string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
