--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="settings_color">Color</string>
     <string name="settings_color_summary">Use orange background instead of yellow</string>
     <string name="contact_developer_uri">happypuppydev@gmail.com</string>
-    <string name="version">1.4.5</string>
+    <string name="version">1.4.6</string>
     <string name="send_email_using">Send email using...</string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
@@ -48,7 +48,7 @@
     <string name="saved_data">"Saved Data"</string>
     <string name="no_data">"No Data"</string>
     <string name="share">"Share"</string>
-    <string name="email_header">"Name | Speech Type | Time | Timestamp"</string>
+    <string name="email_header">"Name | Speech Type | Time"</string>
     <string name="email_subject_tm_timer_report">"Toastmasters Timer Report"</string>
     <string name="share_via">"Share via"</string>
 
